# turing

./: CMakeLists.txt  Cargo.toml  test.tr
src/: compiler.rs  engine.rs  errors.rs  main.rs  turing_compile.cpp  turing_interface.h  turing_motor.cpp  turing_motor.h
